# NEOPAX

./: .gitignore  .gitmodules  .readthedocs.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Er_Test.h5  GX_SPECTRAX-GK_t3D_like.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  RADAU_QUICK_START.md  README.md  SFINCS_JAX_Connection_PLAN.md  SFINCS_sfincs_jax_connection.md  SPECTRAX_quasilinear_runtime_method.md  auto_diff.md  benchmar_lagged_approach.md  context.md  equation_solver_refactor.md  future_boundary_condition_implementation.md  future_boundary_conmditions_imporvement.md  fvm_refactor_plan.md  mimicing_torax_transport_solver.md  pyproject.toml  requirements.txt  solver_refactoring.md  source_transport_refactoring.md  sources.md  summary.md  theta_method_refactor_for_stellarator_Er.md  theta_solver_update.md  transport_equations.md  transport_models.md
NEOPAX/: __init__.py  __main__.py  _ambipolarity copy 2.py  _ambipolarity copy 3.py  _ambipolarity copy 4.py  _ambipolarity copy.py  _ambipolarity.py  _anderson.py  _boundary_conditions.py  _broyden.py  _cell_variable.py  _constants.py  _custom_root_newton.py  _database.py  _database_ntss_preprocessed.py  _database_preprocessed.py  _energy_grid_models.py  _entropy_models.py  _fem.py  _field.py  _field_old.py  _geometry_models.py  _grid.py  _interpolators.py  _interpolators_ntss_preprocessed.py  _interpolators_preprocessed.py  _io.py  _main_solver.py  _model_api.py  _monoenergetic.py  _monoenergetic_interpolators.py  _neoclassical.py  _neoclassical_old.py  _newton_raphson.py  _orchestrator.py  _parameters.py  _physics.py  _profiles.py  _runtime_models.py  _source_models.py  (+17 more)
NEOPAX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  custom_models.rst  expensive_response_methods.rst  getting_started.rst  index.rst  input_file_reference.rst  methods_of_use.rst  overview.rst  refact_two_stage_ambi.md  requirements.txt  solver_backends.rst  transport_physics_and_flux_models.rst  worked_examples.rst
examples/: example_dynamic_species.py  (+3 more)
outputs/: fluxes.h5
(+318 files in other folders)
