[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["NEOPAX"]

[tool.setuptools_scm]
write_to = "NEOPAX/version.py"

[project]
name = "NEOPAX"
description = "ESSOS: e-Stellarator Simulation and Optimization Suite"
readme = "README.md"
authors = [{ name = "UWPlasma, UW-Madison group", email = "lascasneto@wisc.edu" }]
license = { file = "LICENSE" }
dynamic = ["version"]

classifiers = [
    "Development Status :: 1 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Plasma", 
     "Physics", 
     "Simulation",
     "JAX"]
 
dependencies = [ "jax", "jaxlib", "matplotlib", "diffrax", "interpax, "optimistix","h5py", "netcdf4"]
 
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/uwplasma/NEOPAX"

[project.scripts]
NEOPAX = "NEOPAX.__main__:main"
 